[gd_scene load_steps=15 format=2]

[ext_resource path="res://2d/Art/ball.png" type="Texture" id=1]
[ext_resource path="res://2d/Art/sports-tennis.png" type="Texture" id=2]
[ext_resource path="res://2d/Art/grasscourt.webp" type="Texture" id=3]
[ext_resource path="res://2d/Art/8-2-deadpool-face-png_400x400.png" type="Texture" id=4]
[ext_resource path="res://2d/Code/Swipe.gd" type="Script" id=5]
[ext_resource path="res://2d/Code/Ball.gd" type="Script" id=6]
[ext_resource path="res://HitPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://2d/Code/Player.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 259.771, 6.91757 )

[sub_resource type="CircleShape2D" id=2]
radius = 23.3126

[sub_resource type="CapsuleShape2D" id=3]
radius = 22.4108
height = 90.1526

[sub_resource type="CircleShape2D" id=4]
radius = 32.8328

[sub_resource type="CircleShape2D" id=5]
radius = 78.7345

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0

[node name="2d Tennis" type="Node2D"]

[node name="Court" type="StaticBody2D" parent="."]
position = Vector2( 136.737, 652.966 )
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Court"]
position = Vector2( 135.467, -253.623 )
rotation = 1.5708
scale = Vector2( 1.85703, 2.36807 )
texture = ExtResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Court"]
position = Vector2( 162.346, -251.071 )
shape = SubResource( 1 )

[node name="HitPoints" type="Node2D" parent="Court"]

[node name="B" parent="Court/HitPoints" instance=ExtResource( 7 )]

[node name="A" parent="Court/HitPoints" instance=ExtResource( 7 )]
position = Vector2( 74.9535, -550.603 )

[node name="B2" parent="Court/HitPoints" instance=ExtResource( 7 )]
position = Vector2( 270.115, -329.986 )

[node name="A2" parent="Court/HitPoints" instance=ExtResource( 7 )]
position = Vector2( 74.9535, -329.986 )

[node name="D" parent="Court/HitPoints" instance=ExtResource( 7 )]
position = Vector2( 270.115, 26.7408 )

[node name="C" parent="Court/HitPoints" instance=ExtResource( 7 )]
position = Vector2( 74.9535, 26.7408 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 422.75, 657.635 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ball"]
scale = Vector2( 0.0220713, 0.0220713 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 555.775, 276.472 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.350407, 0.350407 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 2.83167, 0.471924 )
shape = SubResource( 3 )

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 459.792, 40.2145 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Player2"]
position = Vector2( 2.83179, 0.471924 )
scale = Vector2( 0.163424, 0.163424 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 2.83167, 0.471924 )
shape = SubResource( 4 )
disabled = true

[node name="HitZone" type="Area2D" parent="Player2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/HitZone"]
shape = SubResource( 5 )

[node name="Swipe" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 109.864, 79.7863 )
emitting = false
amount = 20
process_material = SubResource( 6 )
[connection signal="body_entered" from="Court/HitPoints/B" to="Ball" method="_on_HitPoint_body_entered"]
[connection signal="body_entered" from="Court/HitPoints/A" to="Ball" method="_on_HitPoint_body_entered"]
[connection signal="body_entered" from="Court/HitPoints/B2" to="Ball" method="_on_HitPoint_body_entered"]
[connection signal="body_entered" from="Court/HitPoints/A2" to="Ball" method="_on_HitPoint_body_entered"]
[connection signal="body_entered" from="Player2/HitZone" to="Ball" method="_on_HitZone_body_entered"]
